fix margin-top collapse

--- a/css/common.css
+++ b/css/common.css
@@ -113,7 +113,6 @@ header nav li a {
 .s2 .w {
     height: 480px;
     background-color: #fff;
-    overflow: hidden;
 }
 
 .s2 .brands {
